# notifications

./: .env.example  .gitignore  README.md  docker-compose.yml
rabbit_api/: Dockerfile  requirements.txt
rabbit_api/src/: main.py
rabbit_api/src/alembic/: env.py
rabbit_api/src/core/: config.py
rabbit_api/src/db/: postgres.py
rabbit_api/src/models/: models.py  schemas.py
rabbit_api/src/services/: crud.py  publisher.py
rabbit_api/src/tests/: test_app.py
render_engine/: Dockerfile  pyproject.toml  requests.txt  requirements.txt
render_engine/src/: app.py
render_engine/src/config/: logger.py  settings.py
render_engine/src/core/: consumer.py  extraction.py  message_handler.py  publisher.py  rendering.py  schemas.py  url_shortener.py
render_engine/src/tests/: conftest.py
render_engine/src/tests/fixtures/: message_handler.py  mock_external_services.py
render_engine/src/tests/testdata/: messages.py
render_engine/src/tests/unit/: test_email_handler.py
render_engine/src/utils/: backoff.py
sender/: .env  .env.example  Dockerfile  Makefile  config.py  docker-compose.dev.yml  docker-compose.yml  models.py  producer.py  requirements.txt  sender.py  servers.py  test_template.html  todos.txt  wait-for-it.sh
sender/db/: connections.py  postgres.py
sender/services/: email_service.py
sender/sql/: create_tables.sql
sender/src/core/: config.py
sender/src/db/: abstract_database.py  abstract_database_service.py  connections.py  postgres.py
sender/src/models/: models.py
sender/src/services/: servers.py  (+3 more)
test/: .env.example  test_docker-compose.yml
(+8 files in other folders)
