[tool.poetry]
name = "Template engine for notification service"
version = "0.1.0"
description = ""
authors = ["IAmIrina <irina.vl.kiseleva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecs-logging = "^2.0.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
Jinja2 = "^3.1.2"
pika = "^1.3.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
